[gd_scene load_steps=14 format=3 uid="uid://coejmhx0hhcij"]

[ext_resource type="Script" path="res://scenes/Entities/Android.gd" id="1_bjqn4"]
[ext_resource type="Texture2D" uid="uid://barv6btxmys5d" path="res://athtech_assets/enemies/android_sword2.png" id="1_qkht2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_igtik"]
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pxg40"]
atlas = ExtResource("1_qkht2")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0unt"]
atlas = ExtResource("1_qkht2")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wvu2"]
atlas = ExtResource("1_qkht2")
region = Rect2(12, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48du8"]
atlas = ExtResource("1_qkht2")
region = Rect2(54, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5xem"]
atlas = ExtResource("1_qkht2")
region = Rect2(18, 0, 39, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evnsn"]
atlas = ExtResource("1_qkht2")
region = Rect2(12, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsyux"]
atlas = ExtResource("1_qkht2")
region = Rect2(12, 0, 42, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hg3iq"]
animations = [{
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_pxg40")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_q0unt")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_5wvu2")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_48du8")
}],
"loop": false,
"name": &"attacking",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5xem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evnsn")
}],
"loop": false,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsyux")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xy3k4"]
radius = 9.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgomv"]
size = Vector2(250, 19.5)

[node name="AndroidEnemy" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_bjqn4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_igtik")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -1)
sprite_frames = SubResource("SpriteFrames_hg3iq")
animation = &"attacking"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-29, -34)

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(13, 30)
shape = SubResource("CapsuleShape2D_xy3k4")

[node name="CheckForGap" type="RayCast2D" parent="Hitbox"]
position = Vector2(11, 45)
target_position = Vector2(0, 7)
collide_with_areas = true

[node name="PlayerMonitor" type="Area2D" parent="."]
position = Vector2(-107, -28)
collision_layer = 0
collision_mask = 3

[node name="CollisionCheck" type="RayCast2D" parent="PlayerMonitor"]
position = Vector2(107, 28)
target_position = Vector2(-45, 0)

[node name="CheckForPlayer" type="CollisionShape2D" parent="PlayerMonitor"]
position = Vector2(107, 28)
shape = SubResource("RectangleShape2D_pgomv")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="area_entered" from="PlayerMonitor" to="." method="_on_player_monitor_area_entered"]
[connection signal="area_exited" from="PlayerMonitor" to="." method="_on_player_monitor_area_exited"]
